added some more data (Title, author, date) to the history nodes

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,20 @@
 .idea/workspace.xml
 .idea/jsLibraryMappings.xml
 code/.idea/workspace.xml
+demo/arrows.html
+demo/clusters.html
+demo/demo.css
+demo/demo.js
+demo/dom.html
+demo/etl-status.html
+demo/graph-story-board.html
+demo/hover.html
+demo/interactive-demo.html
+demo/sentence-tokenization.html
+demo/shapes.html
+demo/style-attrs.html
+demo/svg-labels.html
+demo/tcp-state-diagram.html
+demo/tipsy.css
+demo/tipsy.js
+demo/user-defined.html
